--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export",
+    "out": "next build && next export && echo. > out\\.nojekyll",
+    "predeploy": "npm run out",
+    "deploy": "gh-pages -d out --dotfiles"
   },
+  "homepage": "https://github.com/Tusherbhomik/Api_Documentation_Template",
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-dialog": "^1.1.7",
@@ -35,6 +40,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
